# CodeAIdapter-server

./: .env-example  .gitignore  README.md  app.py  config.py  pyproject.toml  test.py
service/: TSID.py  deploy.py
service/deploy/: __init__.py  k8s.py  utils.py
utils/: utils.py
utils/llm/: __init__.py  base.py  gemini.py  openai.py
