[tool.poetry]
name = "codeaidapter-server"
version = "0.1.0"
description = ""
authors = ["ryanlinjui <ryanlinjui@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.1.0"
python-dotenv = "^1.0.1"
google-cloud = "^0.34.0"
google-cloud-aiplatform = "^1.80.0"
openai = "^1.62.0"
pexpect = "^4.9.0"
flask-cors = "^5.0.0"

[tool.poetry.group.dev.dependencies]
objprint = "^0.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
